--- a/CLASSTEST.vcxproj
+++ b/CLASSTEST.vcxproj
@@ -42,7 +42,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>CLASS\ROB;CLASS\CAM;CLASS\CAM\KSJApiInc;CLASS\CAM\IMGInc;CLASS\CAM\DSInc;CLASS\CAM\PTGInc;$(ProjectDir)EXTERN\BCGCBPro;$(ProjectDir)CLASS\COM;$(ProjectDir)CLASS\SOCKET;$(ProjectDir);$(ProjectDir)INC;$(ProjectDir)INC\MotionCard;$(ProjectDir)EXTERN\KDXF\include;$(ProjectDir)EXTERN\opencv\build\include;$(ProjectDir)EXTERN\opencv\build\include\opencv;$(ProjectDir)EXTERN\opencv\build\include\opencv2;E:\wzn\opencv231\build\include;E:\wzn\opencv231\build\include\opencv2;E:\wzn\opencv231\build\include\opencv;EXTERN\MotionCard\INC;$(IncludePath)</IncludePath>
+    <IncludePath>assistant;CLASS\ROB;CLASS\CAM;CLASS\CAM\KSJApiInc;CLASS\CAM\IMGInc;CLASS\CAM\DSInc;CLASS\CAM\PTGInc;$(ProjectDir)EXTERN\BCGCBPro;$(ProjectDir)CLASS\COM;$(ProjectDir)CLASS\SOCKET;$(ProjectDir);$(ProjectDir)INC;$(ProjectDir)INC\MotionCard;$(ProjectDir)EXTERN\KDXF\include;$(ProjectDir)EXTERN\opencv\build\include;$(ProjectDir)EXTERN\opencv\build\include\opencv;$(ProjectDir)EXTERN\opencv\build\include\opencv2;E:\wzn\opencv231\build\include;E:\wzn\opencv231\build\include\opencv2;E:\wzn\opencv231\build\include\opencv;EXTERN\MotionCard\INC;$(IncludePath)</IncludePath>
     <LibraryPath>CLASS\CAM\IMGLib;CLASS\CAM\KSJApiLib;CLASS\CAM\PTGLib;CLASS\CAM\DSLib;$(ProjectDir)LIB\MotionCard;$(ProjectDir)EXTERN\KDXF\libs;$(ProjectDir)EXTERN\opencv\build\x86\vc10\lib;$(ProjectDir)EXTERN\BCGCBPro\lib;EXTERN\MotionCard\LIB;$(LibraryPath)</LibraryPath>
     <EmbedManifest>false</EmbedManifest>
     <GenerateManifest>false</GenerateManifest>
@@ -110,14 +110,18 @@
     <None Include="res\CLASSTEST.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="assistant\Smtp.h" />
+    <ClInclude Include="assistant\SoftConfig.h" />
+    <ClInclude Include="assistant\XFunCom.h" />
+    <ClInclude Include="assistant\YCIni.h" />
     <ClInclude Include="BOSSCLASS.h" />
     <ClInclude Include="CLASS\BCG\BCGdlg.h" />
     <ClInclude Include="CLASS\BCG\CWBCG.h" />
+    <ClInclude Include="CLASS\CV\WPowerCV.h" />
     <ClInclude Include="CLASS\MFCCTRL\GdipButton.h" />
     <ClInclude Include="CLASS\MFCCTRL\WMFCBtn.h" />
     <ClInclude Include="CLASS\MONITOR\explorer1.h" />
     <ClInclude Include="CLASS\MONITOR\MyBrower.h" />
-    <ClInclude Include="CLASS\MONITOR\Smtp.h" />
     <ClInclude Include="CLASS\MONITOR\WmonUrl.h" />
     <ClInclude Include="CLASS\ROB\pinyin.h" />
     <ClInclude Include="CLASS\ROB\speech_recognizer.h" />
@@ -132,21 +136,22 @@
     <ClInclude Include="Def.h" />
     <ClInclude Include="ResDlg.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="SoftConfig.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="XFunCom.h" />
-    <ClInclude Include="YCIni.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="assistant\Smtp.cpp" />
+    <ClCompile Include="assistant\SoftConfig.cpp" />
+    <ClCompile Include="assistant\XFunCom.cpp" />
+    <ClCompile Include="assistant\YCIni.cpp" />
     <ClCompile Include="BOSSCLASS.cpp" />
     <ClCompile Include="class\bcg\bcgdlg.CPP" />
     <ClCompile Include="CLASS\BCG\CWBCG.cpp" />
+    <ClCompile Include="CLASS\CV\WPowerCV.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\GdipButton.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\WMFCBtn.cpp" />
     <ClCompile Include="CLASS\MONITOR\explorer1.cpp" />
     <ClCompile Include="CLASS\MONITOR\MyBrower.cpp" />
-    <ClCompile Include="CLASS\MONITOR\Smtp.cpp" />
     <ClCompile Include="CLASS\MONITOR\WmonUrl.cpp" />
     <ClCompile Include="CLASS\ROB\speech_recognizer.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
@@ -161,13 +166,10 @@
     <ClCompile Include="CLASSTEST.cpp" />
     <ClCompile Include="CLASSTESTDlg.cpp" />
     <ClCompile Include="ResDlg.cpp" />
-    <ClCompile Include="SoftConfig.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="XFunCom.cpp" />
-    <ClCompile Include="YCIni.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="CLASSTEST.rc" />
