--- a/CLASSTEST.vcxproj
+++ b/CLASSTEST.vcxproj
@@ -206,6 +206,10 @@
     <ClInclude Include="CLASS\CV\WPowerCV.h" />
     <ClInclude Include="CLASS\MFCCTRL\GdipButton.h" />
     <ClInclude Include="CLASS\MFCCTRL\ImageStatic.h" />
+    <ClInclude Include="CLASS\MFCCTRL\tab\MFCTAB.h" />
+    <ClInclude Include="CLASS\MFCCTRL\tab\W.h" />
+    <ClInclude Include="CLASS\MFCCTRL\tab\WAONE.h" />
+    <ClInclude Include="CLASS\MFCCTRL\tab\WATWO.h" />
     <ClInclude Include="CLASS\MFCCTRL\WMFCBtn.h" />
     <ClInclude Include="CLASS\MONITOR\explorer1.h" />
     <ClInclude Include="CLASS\MONITOR\MyBrower.h" />
@@ -240,6 +244,10 @@
     <ClCompile Include="CLASS\CV\WPowerCV.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\GdipButton.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\ImageStatic.cpp" />
+    <ClCompile Include="CLASS\MFCCTRL\tab\MFCTAB.cpp" />
+    <ClCompile Include="CLASS\MFCCTRL\tab\W.cpp" />
+    <ClCompile Include="CLASS\MFCCTRL\tab\WAONE.cpp" />
+    <ClCompile Include="CLASS\MFCCTRL\tab\WATWO.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\WMFCBtn.cpp" />
     <ClCompile Include="CLASS\MONITOR\explorer1.cpp" />
     <ClCompile Include="CLASS\MONITOR\MyBrower.cpp" />
