--- a/CLASSTEST.vcxproj
+++ b/CLASSTEST.vcxproj
@@ -206,6 +206,7 @@
     <ClInclude Include="CLASS\CV\WPowerCV.h" />
     <ClInclude Include="CLASS\MFCCTRL\GdipButton.h" />
     <ClInclude Include="CLASS\MFCCTRL\ImageStatic.h" />
+    <ClInclude Include="CLASS\MFCCTRL\ManStaticTest.h" />
     <ClInclude Include="CLASS\MFCCTRL\tab\MFCTAB.h" />
     <ClInclude Include="CLASS\MFCCTRL\tab\W.h" />
     <ClInclude Include="CLASS\MFCCTRL\tab\WAONE.h" />
@@ -244,6 +245,7 @@
     <ClCompile Include="CLASS\CV\WPowerCV.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\GdipButton.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\ImageStatic.cpp" />
+    <ClCompile Include="CLASS\MFCCTRL\ManStaticTest.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\tab\MFCTAB.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\tab\W.cpp" />
     <ClCompile Include="CLASS\MFCCTRL\tab\WAONE.cpp" />
